styles.css
text {
    font-family: sans-serif;
}
h1, h3, h4 {
    text-align: center;
    font-family: sans-serif;
}

body {
    padding-top: 30px;
}

/* For grouped bars */

#legend text {
    font-size: 0.9em;
}


/* For index.html*/

#major-dropdown {
    top: 0;
    padding: 5px 5px;
    height: 40px;
    background: #373640;
    color: #FFF;
    border: 0 none;
}

#major-dropdown:hover {
    background: #63686e;
}

.buttonDiv {
    margin: 10px 20px 10px 0;
    font-weight: 600;
    text-align: center;
    line-height: 30px;
    color: #FFF;
    border-radius: 5px;
    transition: all 0.2s ;
    background: #373640;
}

.buttonDiv:hover {
    background: #82888f;
}

.filterMenu {
    padding-left: 100px;
    padding-right: 100px;
    text-align: center;
}

#chartWomen, #chartMedian, #chartFt, #chartCollege, #chartUnemployed {
    height: 250px;
    width: 500px;
    padding-left: 3%;
    padding-right: 3%
}

.topLabel {
    text-align: center;
    font-family: sans-serif;
    font-weight: bold;
}

.filterMenu {
    font-family: sans-serif;
}

svg {
    shape-rendering: crispEdges;
}

.bar rect {
    padding-left: 5px;
}

.grouperoo {
    margin: 0;
}

.value {
    font-size: 12px;
    font-weight: 300;
}

.label {
    font-size: 18px;
    fill: #333;
}

.line {
    margin: 10px 0px;
    stroke: #cccccc;
}

.line line {
    stroke-width: 1;
    stroke: rgba(0, 0, 0, 0.1);
}

#majors{
    font-size: 11px;
}

div.tooltip {
    position: absolute;
    text-align: center;
    width: 80px;
    height: 25px;
    padding: 15px 2px 10px 2px;
    font: 1em sans-serif;
    color: white;
    background: rgba(0, 0, 0, 0.9);
    border: 0px;
    border-radius: 8px;
    pointer-events: none;
}

/* For bubble chart */

g.cell text.label {
    font-size: 1em;
}

/*
svg {
    position: fixed;
    top: 0;
    left: 0;
    margin: 10px;
    height: 100%;
    width: 100%;
}
 */

